--- a/20_10.html
+++ b/20_10.html
@@ -39,7 +39,7 @@
     </ul><br>
     </p>
     <h5><a href="https://www.instagram.com" style="color:rgb(9, 106, 197)">Insta Handle</a></h5>
-    <img src="https://wallpaperaccess.com/download/demon-slayer-logo-4716430" alt="image not available" width="200"
+    <img src="https://i.pinimg.com/originals/86/ee/e1/86eee19e84af21868e53fec24e0e1459.png" alt="image not available" width="200"
         height="300">
 </body>
 
