--- a/20_10.html
+++ b/20_10.html
@@ -9,7 +9,7 @@
 </head>
 
 <body
-    style="background-image: url(https://wallpaperaccess.com/download/demon-slayer-logo-4716545);background-size: cover;">
+    style="background-image: url(https://wallpaperaccess.com/download/demon-slayer-logo-4716545);background-size: cover;backgroud-attachment:fixed">
     <br><br>
     <h1 style="text-align:center;color:rgb(243, 246, 248)">User Interface Design</h1>
     <p style="color:black"><b>This is </b><b style="color:rgb(201, 105, 236)">Hem Sagar!</b><br>
