--- a/HTML/Personal Website/blog.html
+++ b/HTML/Personal Website/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Skills!</title>
+        <title>Blog!</title>
         <link rel="icon" href="/Users/hemsagar/Btech/sem-03/User Interface Design/html/Personal Website/images/logo_icon.png">
         <style>
             body{
