--- a/HTML/Personal Website/contact.html
+++ b/HTML/Personal Website/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Conatact Me!</title>
+        <title>Contact Me!</title>
         <link rel="icon" href="/Users/hemsagar/Btech/sem-03/User Interface Design/html/Personal Website/images/logo_icon.png">
         <style>
             body{
