--- a/HTML/Personal_Website/aboutme.html
+++ b/HTML/Personal_Website/aboutme.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>About!</title>
-        <link rel="icon" href="/Users/hemsagar/Btech/sem-03/User Interface Design/html/Personal Website/images/logo_icon.png">
+        <link rel="icon" href="images/logo_icon.png">
         <style>
             body{
                 margin:0;
-                background-image: url("/Users/hemsagar/Btech/sem-03/User Interface Design/html/Personal Website/images/about.png");
+                background-image: url("images/about.png");
                 background-attachment: fixed;
                 background-size: cover;
                 background-repeat: no-repeat;
@@ -82,7 +82,7 @@
             I'm quite well-versed in linux, C, C++, HTML & CSS.<br><br> 
             I have a keen eye for lights and photos!<br>
             Lets take a pic 📸 when we catch up.<br><br>
-            <a href="/Users/hemsagar/Btech/sem-03/User Interface Design/html/Personal Website/gallery.html">My Gallery ></a>
+            <a href="gallery.html">My Gallery ></a>
         </div>
         
         </div>
