--- a/HTML/Personal_Website/gallery.html
+++ b/HTML/Personal_Website/gallery.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>Gallery!</title>
-        <link rel="icon" href="/Users/hemsagar/Btech/sem-03/User Interface Design/html/Personal Website/images/logo_icon.png">
+        <link rel="icon" href="images/logo_icon.png">
         <style>
             body{
                 margin:0;
-                background-image: url("/Users/hemsagar/Btech/sem-03/User Interface Design/html/Personal Website/images/gallery.png");
+                background-image: url("images/gallery.png");
                 background-attachment: fixed;
                 background-size: cover;
                 background-repeat: no-repeat;
