--- a/HTML/Personal_Website/blog.html
+++ b/HTML/Personal_Website/blog.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Skills!</title>
-        <link rel="icon" href="/Users/hemsagar/Btech/sem-03/User Interface Design/html/Personal Website/images/logo_icon.png">
+        <title>Blog!</title>
+        <link rel="icon" href="images/logo_icon.png">
         <style>
             body{
                 margin:0;
-                background-image: url("/Users/hemsagar/Btech/sem-03/User Interface Design/html/Personal Website/images/bg4.png");
+                background-image: url("images/bg4.png");
                 background-attachment: fixed;
                 background-size: cover;
                 background-repeat: no-repeat;
