--- a/HTML/Personal_Website/index.html
+++ b/HTML/Personal_Website/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="icon" type="image/x-icon" href="images/logo_icon.png">
-        <title>Portfolio!</title>
+        <title>Home!</title>
         
         <style>
             body{
