--- a/anokha/about.html
+++ b/anokha/about.html
@@ -69,7 +69,7 @@
         <nav>
             <ul>
                 <li style="font-family:'Trebuchet MS';font-size:large;float: left;color: rgba(255, 255, 255, 0.999);">
-                    <a href="anokha.html"><img src="amrita.png"></a></li>
+                    <a href="index.html"><img src="images/amrita.png"></a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="blog.html">Research</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
