--- a/anokha/index.html
+++ b/anokha/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="icon" type="image/x-icon" href="https://imgs.search.brave.com/1s_0l4HUMqAyRveCkVazdC1cTUNGK0uzOIiJ6aznXlo/rs:fit:474:225:1/g:ce/aHR0cHM6Ly90c2Uy/Lm1tLmJpbmcubmV0/L3RoP2lkPU9JUC4z/MF9rZFRVVjFwRlA3/dHlybVNiTjd3SGFI/YSZwaWQ9QXBp">
+        <link rel="icon" type="image/x-icon" href="https://cms.cb.amrita.edu/favicon.ico?v=1">
         <meta charset="UTF-8">
         <title>Anokha Tech Fest 2K23</title>
     </head>
