--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -77,7 +77,7 @@
         <div style="font-family:'Trebuchet MS';color:aliceblue;text-align:left;font-size:325%;">
         <br>
         Hello!!
-        <span style="font-size:150%">I'm Hem Sagar,</span>
+        <span style="font-size:150%">I'm Hem Sagar.</span>
     
         <span style="font-size: 60%;">Student, Photographer
              Amrita Vishwa Vidyapeetham</span>
