--- a/Anokha 2023/index.html
+++ b/Anokha 2023/index.html
@@ -13,10 +13,10 @@
                 <a href="https://amrita.edu" target="_blank"><img class="logo" src="images/amritalogo_w.svg"></a>
                 <ul>
                     <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="events.html">Events</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="accomodation.html">Accomodation</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="./html/events.html">Events</a></li>
+                    <li><a href="html/gallery.html">Gallery</a></li>
+                    <li><a href="html/accomodation.html">Accomodation</a></li>
+                    <li><a href="html/contact.html">Contact</a></li>
                 </ul>
             </div>
 
@@ -35,8 +35,8 @@
                     <p>Organized by : School of Engineering, Amrita Vishwa Vidyapeetham</p>
                     <p>Campus : Coimbatore</p>
                     <br><br>
-                    <a href="register.html"><button><span class="mask"></span>Register!</button></a>
-                    <a href="signin.html"><button><span class="mask"></span>Login</button></a>
+                    <a href="html/register.html"><button><span class="mask"></span>Register!</button></a>
+                    <a href="html/signin.html"><button><span class="mask"></span>Login</button></a>
                 </div>
                 <br>
                 <div>
