--- a/anokha/html/register.html
+++ b/anokha/html/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Log In!</title>
+        <title>Register!</title>
         <link rel="stylesheet" href="../css/register.css">
         <link rel="icon" href="../images/amrita_favicon.png">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
