--- a/anokha/html/contact.html
+++ b/anokha/html/contact.html
@@ -50,11 +50,11 @@
                 </div>
             </div>
             <div class="social">
-                <a href="https://www.instagram.com/anokhatechfest/"><img src="https://img.icons8.com/nolan/64/instagram-new.png"/></a>
-                <a href="mailto:anokhatechfest2023@gmail.com"img src="https://img.icons8.com/nolan/64/filled-message.png"/></a>
-                <a href="https://www.facebook.com/anokha.amrita/"><img src="https://img.icons8.com/nolan/64/facebook-new.png"/></a>
-                <a href="https://twitter.com/anokha_techfest?lang=en"><img src="https://img.icons8.com/nolan/64/twitter.png"/></a>
-                <a href="https://www.youtube.com/@AnokhaTechfest"><img src="https://img.icons8.com/nolan/64/youtube-play.png"/></a>
+                <a href="https://www.instagram.com/anokhatechfest/" target="_blank"><img src="https://img.icons8.com/nolan/64/instagram-new.png"/></a>
+                <a href="mailto:anokhatechfest2023@gmail.com"target="_blank">img src="https://img.icons8.com/nolan/64/filled-message.png"/></a>
+                <a href="https://www.facebook.com/anokha.amrita/"target="_blank"><img src="https://img.icons8.com/nolan/64/facebook-new.png"/></a>
+                <a href="https://twitter.com/anokha_techfest?lang=en" target="_blank"><img src="https://img.icons8.com/nolan/64/twitter.png"/></a>
+                <a href="https://www.youtube.com/@AnokhaTechfest" target="_blank"><img src="https://img.icons8.com/nolan/64/youtube-play.png"/></a>
             </div>
         </div>
 
