--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -46,7 +46,7 @@
                         <p><i class="fa fa-phone"></i><span> Phone</span>1012-1231-12</p>
                     </div>
                     <div class="col-md-3 col-sm-4 col-xs-12">
-                        <p><i class="fa fa-envelope-o"></i><span> Email</span><a href="#">alumniassociation@cb.amrita.edu</a></p>
+                        <p><i class="fa fa-envelope-o"></i><span> Email</span><a href="#">alumni@cb.amrita.edu</a></p>
                     </div>
                     <div class="col-md-5 col-sm-4 col-xs-12">
                         <ul class="social-icon">
@@ -240,7 +240,7 @@
     		<div class="container">
     			<div class="row">
     				<div class="col-md-12">
-    					<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s"><span>AWESOME</span> GALLERY</h2>
+    					<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s"><span>Gallery</span></h2>
     				</div>
     				<div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
                         <div class="portfolio-thumb">
