--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -99,6 +99,7 @@
                             <div class="sub-element">All notices on important events are updated in Events section</div>
                         </div>
     					<a data-scroll href="#about" class="btn btn-default wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s">LOG IN</a>
+					<a data-scroll href="#about" class="btn btn-default wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s">REGISTER</a>
     				</div>
     			</div>
     		</div>
