--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -46,7 +46,7 @@
                         <p><i class="fa fa-phone"></i><span> Phone</span>1012-1231-12</p>
                     </div>
                     <div class="col-md-3 col-sm-4 col-xs-12">
-                        <p><i class="fa fa-envelope-o"></i><span> Email</span>alumni@cb.amrita.edu</p>
+                        <p><i class="fa fa-envelope-o"></i><span> Email</span><a href="#">alumni@cb.amrita.edu</a></p>
                     </div>
                     <div class="col-md-5 col-sm-4 col-xs-12">
                         <ul class="social-icon">
