--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -71,7 +71,7 @@
 						<span class="icon icon-bar"></span>
 						<span class="icon icon-bar"></span>
 					</button>
-					<a href="#" class="navbar-brand">AMRITA</a>
+					<a href="https://www.amrita.edu/" class="navbar-brand">AMRITA</a>
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
