--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -92,9 +92,9 @@
     		<div class="container">
     			<div class="row">
     				<div class="col-md-offset-2 col-md-8">
-    					<h1 class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">We have our awesome <br><span>ALUMNI</span></h1>
+    					<h1 class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">Alumni association!</h1> <p style="font-size:50px;"><span style="color: #287761;"><b>See</b></span> more. <span style="color: #287761;"><b>Do</b></span> more.</p>
     					<div class="element">
-                            <div class="sub-element">Welcome to our Alumni portal</div>
+                            <div class="sub-element">Welcome to our Alumni portal !!</div>
                             <div class="sub-element">Here Alumni can be in touch with our university</div>
                             <div class="sub-element">All notices on important events are updated in Events section</div>
                         </div>
