--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -354,8 +354,8 @@
     						<p class="address-title">OUR ADDRESS</p>
     						<span>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie.</span>
     						<p><i class="fa fa-phone" ></i> 010-020-0340</p>
-    						<p><i class="fa fa-envelope-o"></i> awesome@company.com</p>
-    						<p><i class="fa fa-map-marker"></i> 663 New Walk Roadside, Birdeye View, GO 11020</p>
+    						<p><i class="fa fa-envelope-o"></i> alumni@cb.amrita.edu</p>
+    						<p><i class="fa fa-map-marker"></i> Amritanagar, Ettimadai, Tamil Nadu 641112</p>
     					</address>
     					<ul class="social-icon">
     						<li><h4>WE ARE SOCIAL</h4></li>
