--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -135,7 +135,7 @@
 								<h3 class="media-heading">EVENT 2</h3>
 							</div>
 							<div class="media-body">
-								<p>Credits go to <a rel="nofollow" href="http://pixabay.com">Pixabay</a> for homepage image and <a rel="nofollow" href="http://unsplash.com">Unsplash</a> for portfolio images. Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie.</p>
 							</div>
 						</div>
 					</div>
