--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -71,8 +71,7 @@
 						<span class="icon icon-bar"></span>
 						<span class="icon icon-bar"></span>
 					</button>
-					<a href="https://www.amrita.edu/" class="navbar-brand">AMRITA</a>
-				</div>
+					<a href="#" class="navbar-brand"><img width="125px" height="60px" src="images/amrita-logo.png"></a>				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#top">HOME</a></li>
