--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -97,8 +97,8 @@
                             <div class="sub-element">Here Alumni can be in touch with our university</div>
                             <div class="sub-element">All notices on important events are updated in Events section</div>
                         </div>
-    					<a data-scroll href="#about" class="btn btn-default wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s">LOG IN</a>
-					<a data-scroll href="#about" class="btn btn-default wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s">REGISTER</a>
+    					<a data-scroll href="#signin.html" class="btn btn-default wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s">LOG IN</a>
+					<a data-scroll href="#signup.html" class="btn btn-default wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s">REGISTER</a>
     				</div>
     			</div>
     		</div>
