--- a/anokha/html/events.html
+++ b/anokha/html/events.html
@@ -187,7 +187,7 @@ Modified on: 5-JAN-2023
                         </p>
                     </div>
                 </div>
-                <!--<button class="action">Register Now!</button>-->
+                <button class="action">Register Now!</button>
             </div>
         </div>
 
