--- a/Mini-Project/signup.html
+++ b/Mini-Project/signup.html
@@ -50,7 +50,8 @@
 </head>
 
 <body style="background-color: #f0efde; color:aliceblue; font-size:large;">
-  <br><br><br><br><br>
+  <a href="index.html"><img src="images/back.png"></a>
+  <br><br><br>
   <div class="para">
     <br>
     <div style="text-align:center; font-size:40px;">Sign Up</div><br>
