--- a/anokha/index.html
+++ b/anokha/index.html
@@ -158,7 +158,8 @@ Modified on: 5-JAN-2023
         </div>
         <div class="footer">
             <p>
-                Copyright &copy; 2023 All Rights Reserved by Anokha 2K23
+                Copyright &copy; G H Hem Sagar, B.Tech CSE (CYS) - II<br>
+                Part of 20CYS202 - User Interface Design<br>Amrita Vishwa Vidyapeetham, Coimbatore
             </p>
         </div>
 
