--- a/anokha/html/signin.html
+++ b/anokha/html/signin.html
@@ -67,5 +67,10 @@ Modified on: 5-JAN-2023
             }
         </script>
     </div>
+        <div class="footer">
+    <p>
+        Copyright &copy; 2023 All Rights Reserved by Anokha 2K23
+    </p>
+</div>
     </body>
 </html>
