--- a/anokha/html/register.html
+++ b/anokha/html/register.html
@@ -69,5 +69,10 @@ Modified on: 5-JAN-2023
         </div>
         <script src="../js/register.js"></script>
     </div>
+    <div class="footer">
+    <p>
+        Copyright &copy; 2023 All Rights Reserved by Anokha 2K23
+    </p>
+</div>
     </body>
 </html>
