--- a/Mini-Project/html/alumni.html
+++ b/Mini-Project/html/alumni.html
@@ -104,7 +104,7 @@
                     <div class="team-wrapper">
                         <img style="height:265px; width:250px;" src="../images/a1.jpeg" class="img-responsive" alt="team img 1">
                         <div class="team-des">
-                            <h4>TRACY</h4>
+                            <h4>RAMESH</h4>
                             <span>Designer</span>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et
                                 laoreet phasellus ut nisi id leo molest.</p>
@@ -115,7 +115,7 @@
                     <div class="team-wrapper">
                         <img style="width:550px" src="../images/a2.jpeg" class="img-responsive" alt="team img 2">
                         <div class="team-des">
-                            <h4>MARY</h4>
+                            <h4>MANOJ</h4>
                             <span>Developer</span>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et
                                 laoreet phasellus ut nisi id leo molest.</p>
@@ -126,7 +126,7 @@
                     <div class="team-wrapper">
                         <img style="height:265px; width:250px;" src="../images/a3.jpeg" class="img-responsive" alt="team img 3">
                         <div class="team-des">
-                            <h4>JULIA</h4>
+                            <h4>SURENDAR</h4>
                             <span>Director</span>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et
                                 laoreet phasellus ut nisi id leo molest.</p>
@@ -137,7 +137,7 @@
                     <div class="team-wrapper">
                         <img style="height:265px; width:250px;" src="../images/a4.jpeg" class="img-responsive" alt="team img 4">
                         <div class="team-des">
-                            <h4>LINDA</h4>
+                            <h4>VINOTH</h4>
                             <span>Manager</span>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et
                                 laoreet phasellus ut nisi id leo molest.</p>
@@ -154,7 +154,7 @@
                     <div class="team-wrapper">
                         <img style="height:265px; width:250px;" src="../images/a5.jpeg" class="img-responsive" alt="team img 1">
                         <div class="team-des">
-                            <h4>TRACY</h4>
+                            <h4>ARAVIND</h4>
                             <span>Designer</span>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et
                                 laoreet phasellus ut nisi id leo molest.</p>
@@ -165,7 +165,7 @@
                     <div class="team-wrapper">
                         <img style="height:265px; width:290px;" src="../images/a6.jpeg" class="img-responsive" alt="team img 2">
                         <div class="team-des">
-                            <h4>MARY</h4>
+                            <h4>HARISH</h4>
                             <span>Developer</span>
                             <p>Lorem ipsum dolor consectetur adipiscing elitquisque tempus ac eget diam et
                                 laoreet phasellus ut nisi id leo molest.</p>
@@ -176,7 +176,7 @@
                     <div class="team-wrapper">
                         <img style="height:265px; width:300px;" src="../images/a7.jpeg" class="img-responsive" alt="team img 3">
                         <div class="team-des">
-                            <h4>JULIA</h4>
+                            <h4>JOSEPH</h4>
                             <span>Director</span>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et
                                 laoreet phasellus ut nisi id leo molest.</p>
@@ -208,13 +208,13 @@
                         <img style="border-radius:1000px;width:150px;height:150px; margin-left:auto;margin-right:auto;" src="../images/a9.jpeg" class="img-responsive" alt="team img 1">
                         <div class="team-des">
                             <p>My experience at Aalto University was more encouraging about life because of the high work- life balance. Seeing the startup culture in Finland wanted to continue in a job at a Finland startup but it was really difficult to get a job due to the COVID situation. Then, I explored the Indian startup ecosystem but I felt the pay was low to start a career, later I was able to find a startup of my interest because of some of my friends in Finland with decent pay to give me</p>
-                                <p style="text-align: right;"><span>Vedanth Padigelwar&emsp;</span></p>
+                                <p style="text-align: right;"><span>Julia&emsp;</span></p>
                         </div>
                     </div>
                 </div>
                 <div  class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.6s">
                     <div class="team-wrapper">
-                        <img style="border-radius:1000px;width:150px;height:150px; margin-left:auto;margin-right:auto;" src="../images/a10.jpeg" class="img-responsive" alt="team img 2">
+                        <img style="border-radius:1000px;width:150px;height:150px; margin-left:auto;margin-right:auto;" src="../images/a11.jpeg" class="img-responsive" alt="team img 2">
                         <div class="team-des">
                             <p> I completed my B.Tech from ECE department at Amrita Viswa Vidyapeetham, Amritapuri . I came to UNM as a part of 4+1 program from Amrita in 2017. Now I am doing my PhD in Electrical engineering at UNM, majoring in systems and controls under Dr Rafael Fierro. I sincerely thank Amrita for giving me this great opportunity."</p>
                                 <p style="text-align: right;">-<span>Lakshmisree Damodaran&emsp;</span></p>
@@ -223,7 +223,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.3s">
                     <div class="team-wrapper">
-                        <img style="border-radius:1000px;width:150px;height:150px; margin-left:auto;margin-right:auto;" src="../images/a11.jpeg" class="img-responsive" alt="team img 3">
+                        <img style="border-radius:1000px;width:150px;height:150px; margin-left:auto;margin-right:auto;" src="../images/a10.jpeg" class="img-responsive" alt="team img 3">
                         <div class="team-des">
                             <p>We would really like to take this moment to thank everyone in the international office for your consistent support and guidance throughout this entire process. It really was a wonderful and insightful experience. We are hoping to get back to work in the near future to land upon some sort of conclusion to our work. Although it is unfortunate that the situations weren't on our side but in the end we are grateful it happened. Thank you so much for this opportunity.</p>
                                 <p style="text-align: right;"><span>Shreya R&emsp;</span></p>
