--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -76,7 +76,7 @@
 						<li><a href="#top">HOME</a></li>
 						<li><a href="#about">EVENTS</a></li>
 						<li><a href="#team">ALUMNI</a></li>
-						<li><a href="#service">POSTS</a></li>
+						<li><a href="#service">JOBS</a></li>
 						<li><a href="#portfolio">GALLERY</a></li>
 						<li><a href="#contact">CONTACT</a></li>
 					</ul>
@@ -108,18 +108,18 @@
 			<div class="container" >
 				<div class="row" >
 					<div class="col-md-12">
-    					<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s"><span> EVENTS</span> </h2>
+    					<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s"><span></span> EVENTS</h2>
     				</div>
 					<div class="col-md-4 col-sm-4 col-xs-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.6s" >
 						<div class="media">
 							<div class="media-heading-wrapper">
 								<div class="media-object pull-left">
-									<i class="fa fa-mobile" style="color: black;"></i>
+									<i class="fa fa-comment-o" style="color: black;"></i>
 								</div>
-								<h3 class="media-heading">EVENT 1</h3>
+								<h3 class="media-heading">Gokulastami Celebrations!</h3>
 							</div>
 							<div class="media-body">
-								<p>Awesome responsive template is provided by <a rel="nofollow" href="http://www.templatemo.com" target="_parent">templatemo</a> website. This is Bootstrap v3.3.2 layout built on HTML5 CSS3. You can use this for any purpose. Please tell your friends about it.</p>
+								<p>Eco-friendly and campus wide Celebrations were organised and various events were performed on October 19th 2022</p>
 							</div>
 						</div>
 					</div>
@@ -129,10 +129,10 @@
 								<div class="media-object pull-left" >
 									<i class="fa fa-comment-o" style="color: black;"></i>
 								</div>
-								<h3 class="media-heading">EVENT 2</h3>
+								<h3 class="media-heading">Anokha 2022!</h3>
 							</div>
 							<div class="media-body">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie.</p>
+								<p>The much awaited Tech fest of 2022 was cancelled due to rise of COVID-19 cases across India.</p>
 							</div>
 						</div>
 					</div>
@@ -140,15 +140,16 @@
 						<div class="media">
 							<div class="media-heading-wrapper">
 								<div class="media-object pull-left">
-									<i class="fa fa-html5" style="color: black;"></i>
+									<i class="fa fa-comment-o" style="color: black;"></i>
 								</div>
-								<h3 class="media-heading">EVENT 3</h3>
+								<h3 class="media-heading">Ganesh Chaturthi celeb!</h3>
 							</div>
 							<div class="media-body">
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie. Adipiscing vitae vel quam proin eget mauris eget. Lorem ipsum dolor sit amet.</p>
+								<p>During the Sem holiday for 1st years, Ganesh Chaturthi works were on a roll and exciting.</p>
 							</div>
 						</div>
 					</div>
+                    
 				</div>
 			</div>
 		</section>
@@ -156,54 +157,52 @@
 
     	<!-- start team -->
     	<section id="team">
-    		<div class="container">
-    			<div class="row">
-    				<div class="col-md-12">
-    					<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s"><span>OUR</span> ALUMNI</h2>
-    				</div>
-    				<div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.3s">
-    					<div class="team-wrapper">
-    						<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNzXYh-X4wxX1jfbPywa8HWoNGDnx1Tlo0-g&usqp=CAU" class="img-responsive" alt="team img 1">
-    							<div class="team-des">
-    								<h4>TRACY</h4>
-    								<span>Designer</span>
-    								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molest.</p>
-    							</div>
-    					</div>
-    				</div>
-    				<div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.6s">
-    					<div class="team-wrapper">
-    						<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNzXYh-X4wxX1jfbPywa8HWoNGDnx1Tlo0-g&usqp=CAU" class="img-responsive" alt="team img 2">
-    							<div class="team-des">
-    								<h4>MARY</h4>
-    								<span>Developer</span>
-    								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molest.</p>
-    							</div>
-    					</div>
-    				</div>
-    				<div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.3s">
-    					<div class="team-wrapper">
-    						<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNzXYh-X4wxX1jfbPywa8HWoNGDnx1Tlo0-g&usqp=CAU" class="img-responsive" alt="team img 3">
-    							<div class="team-des">
-    								<h4>JULIA</h4>
-    								<span>Director</span>
-    								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molest.</p>
-    							</div>
-    					</div>
-    				</div>
-    				<div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.6s">
-    					<div class="team-wrapper">
-    						<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNzXYh-X4wxX1jfbPywa8HWoNGDnx1Tlo0-g&usqp=CAU" class="img-responsive" alt="team img 4">
-    							<div class="team-des">
-    								<h4>LINDA</h4>
-    								<span>Manager</span>
-    								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molest.</p>
-    							</div>
-    					</div>
-    				</div>
-    			</div>
-    		</div>
-    	</section>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s"><span>Some from</span> our ALUMNI</h2>
+					</div>
+					<div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.3s">
+						<div class="team-wrapper">
+							<img style="border-radius:1000px;width:150px;height:150px; margin-left:auto;margin-right:auto;" src="images/a9.jpeg" class="img-responsive" alt="team img 1">
+							<div class="team-des">
+								<p>My experience at Aalto University was more encouraging about life because of the high work- life balance. Seeing the startup culture in Finland wanted to continue in a job at a Finland startup but it was really difficult to get a job due to the COVID situation. Then, I explored the Indian startup ecosystem but I felt the pay was low to start a career, later I was able to find a startup of my interest because of some of my friends in Finland with decent pay to give me</p>
+									<p style="text-align: right;"><span>Julia&emsp;</span></p>
+							</div>
+						</div>
+					</div>
+					<div  class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.6s">
+						<div class="team-wrapper">
+							<img style="border-radius:1000px;width:150px;height:150px; margin-left:auto;margin-right:auto;" src="images/a11.jpeg" class="img-responsive" alt="team img 2">
+							<div class="team-des">
+								<p> I completed my B.Tech from ECE department at Amrita Viswa Vidyapeetham, Amritapuri . I came to UNM as a part of 4+1 program from Amrita in 2017. Now I am doing my PhD in Electrical engineering at UNM, majoring in systems and controls under Dr Rafael Fierro. I sincerely thank Amrita for giving me this great opportunity."</p>
+									<p style="text-align: right;">-<span>Lakshmisree Damodaran&emsp;</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.3s">
+						<div class="team-wrapper">
+							<img style="border-radius:1000px;width:150px;height:150px; margin-left:auto;margin-right:auto;" src="images/a10.jpeg" class="img-responsive" alt="team img 3">
+							<div class="team-des">
+								<p>We would really like to take this moment to thank everyone in the international office for your consistent support and guidance throughout this entire process. It really was a wonderful and insightful experience. We are hoping to get back to work in the near future to land upon some sort of conclusion to our work. Although it is unfortunate that the situations weren't on our side but in the end we are grateful it happened. Thank you so much for this opportunity.</p>
+									<p style="text-align: right;"><span>Shreya R&emsp;</span></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.6s">
+						<div class="team-wrapper">
+							<img style="border-radius:1000px;width:150px;height:150px; margin-left:auto;margin-right:auto;" style="border-radius:1000px;width:150px;height:150px; margin-left:auto;margin-right:auto;" src="images/a12.jpeg" class="img-responsive" alt="team img 4">
+							<div class="team-des">
+								<p>Engineering) (2020)
+	
+									I would suggest my juniors join this university, as it gives new exposures, a new way of teachings, new friendships, a new world</p>
+									<p style="text-align: right;"><span>Akshay Krishna&emsp;</span></p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
     	<!-- end team -->
 
     	<!-- start service -->
