--- a/Mini-Project/html/profile.html
+++ b/Mini-Project/html/profile.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
     <meta charset="utf-8">
     <!--  This file has been downloaded from bootdey.com @bootdey on twitter -->
