--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -12,7 +12,7 @@
 		<meta name="description" content="">
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" href="images/graduate.png">
+		<link rel="icon" href="images/alumni.png">
 		<link rel="stylesheet" href="css/animate.min.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
