broken favicon link updated

--- a/Mini-Project/html/sigin4.html
+++ b/Mini-Project/html/sigin4.html
@@ -1,5 +1,9 @@
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<head>
+		<title>Login / Sign Up</title>
+		<link rel="icon" href="images/alumni.png">
+	</head>
 <style>
 :root {
     --primary-color: #6e5b49;
