--- a/Mini-Project/html/gallery.html
+++ b/Mini-Project/html/gallery.html
@@ -11,6 +11,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Gallery!</title>
+	  <link rel="icon" href="images/alumni.png">
     <link href="../css/lightgallery.css" rel="stylesheet" />
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/animate.min.css">
