--- a/Mini-Project/html/donations.html
+++ b/Mini-Project/html/donations.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+    <link rel="icon" href="images/alumni.png">
     <title>Donations</title>
     <style>
         input[type=button],
