updated  favicon - broken link

--- a/Mini-Project/html/alumni.html
+++ b/Mini-Project/html/alumni.html
@@ -9,6 +9,7 @@
         http://www.templatemo.com/preview/templatemo_450_awesome
         -->
     <title>Alumni Portal</title>
+    <link rel="icon" href="images/alumni.png">
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
