--- a/Mini-Project/html/sigin4.html
+++ b/Mini-Project/html/sigin4.html
@@ -723,7 +723,7 @@ setTimeout(() => {
             }
     
             alert("Registered Successfully!");
-            window.location.href = "home.html";
+            window.location.href = "sigin4.html";
             return true;
           }
     </script>
