--- a/Mini-Project/html/gallery.html
+++ b/Mini-Project/html/gallery.html
@@ -144,8 +144,8 @@
         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.nvtRwYQACRSO3lzr_8JwiQHaDt%26pid%3DApi&f=1&ipt=a32a4d8d8fb2177e9ddf549d3efc289020c74a6955bd81de396f5baa0aa83423&ipo=images" />
       </a>
 
-      <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.dj_Uph26qcT3QaNDptEkuQAAAA%26pid%3DApi&f=1&ipt=18b561ba27ce78857308ed8b80e881fe0fa374ad1cf71235e9ade98f9a519269&ipo=images">
-        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.dj_Uph26qcT3QaNDptEkuQAAAA%26pid%3DApi&f=1&ipt=18b561ba27ce78857308ed8b80e881fe0fa374ad1cf71235e9ade98f9a519269&ipo=images" />
+      <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.rX_533fPQuoyf0XXREY2LwHaDU%26pid%3DApi&f=1&ipt=d7e7d314ec8253f88eb69174cabd29b927c0064d91c47f515d2876521d63eb3a&ipo=images">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.rX_533fPQuoyf0XXREY2LwHaDU%26pid%3DApi&f=1&ipt=d7e7d314ec8253f88eb69174cabd29b927c0064d91c47f515d2876521d63eb3a&ipo=images" />
       </a>
 
       <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.HDnPgfOWqWvL6jZheF_P5gHaDq%26pid%3DApi&f=1&ipt=bae5c6050fbc2163ad44a8fffb9039cccb33f7a6abcd01f40fd028afca0db755&ipo=images" class="big">
@@ -221,8 +221,8 @@
               <div class="row">
                   <div class="col-md-12 text-center">
                       <p class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">
-                        Copyright &copy; UID-DBMS-03<br>Part of 20CYS202-User Interface Design<br>
-                        Amrita TIFAC-CORE in cybersecurity<br>Amrita Vishwa Vidyapeetham Coimbatore</p>
+			Copyright &copy; 2022-23 Alumni Portal<br>G H Hem Sagar, Gokulachselvan CD, KS Santhossh<br>
+			II B.Tech CSE(CYS)<br>Part of 20CYS202 - User Interface Design<br>Amrita Vishwa Vidyapeetham Coimbatore</p>
                   </div>
               </div>
           </div>
