--- a/Mini-Project/html/alumni.html
+++ b/Mini-Project/html/alumni.html
@@ -8,7 +8,7 @@
         Awesome Template
         http://www.templatemo.com/preview/templatemo_450_awesome
         -->
-    <title>Alumni Portal</title>
+    <title>Alumni Details</title>
     <link rel="icon" href="images/alumni.png">
     <meta name="keywords" content="">
     <meta name="description" content="">
@@ -79,7 +79,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="./home.html">HOME</a></li>
-                    <li><a href="#">Alumni</a></li>
+                    <li><a href="#">ALUMNI</a></li>
                     <li><a href="./gallery.html">GALLERY</a></li>
                     <li><a href="donations.html">DONATE</a></li>
                     <li><a href="#contact">CONTACT</a></li>
@@ -272,10 +272,9 @@
                 <div class="col-md-6 col-sm-6 col-xs-12 wow fadeInRight" data-wow-offset="50" data-wow-delay="0.6s">
                     <address>
                         <p class="address-title">OUR ADDRESS</p>
-                        <span>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie.</span>
                         <p><i class="fa fa-phone" ></i> 010-020-0340</p>
-                        <p><i class="fa fa-envelope-o"></i> awesome@company.com</p>
-                        <p><i class="fa fa-map-marker"></i> 663 New Walk Roadside, Birdeye View, GO 11020</p>
+                        <p><i class="fa fa-envelope-o"></i> alumni@cb.amrita.edu</p>
+                        <p><i class="fa fa-map-marker"></i> Amritanagar, Ettimadai, Tamil Nadu 641112</p>
                     </address>
                     <ul class="social-icon">
                         <li><h4>WE ARE SOCIAL</h4></li>
