--- a/Mini-Project/html/gallery.html
+++ b/Mini-Project/html/gallery.html
@@ -198,10 +198,9 @@
           <div class="col-md-6 col-sm-6 col-xs-12 wow fadeInRight" data-wow-offset="50" data-wow-delay="0.6s">
             <address>
               <p class="address-title">OUR ADDRESS</p>
-              <span>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie.</span>
               <p><i class="fa fa-phone" ></i> 010-020-0340</p>
-              <p><i class="fa fa-envelope-o"></i> awesome@company.com</p>
-              <p><i class="fa fa-map-marker"></i> 663 New Walk Roadside, Birdeye View, GO 11020</p>
+              <p><i class="fa fa-envelope-o"></i>  alumni@cb.amrita.edu</p>
+              <p><i class="fa fa-map-marker"></i>  Amritanagar, Ettimadai, Tamil Nadu 641112</p>
             </address>
             <ul class="social-icon">
               <li><h4>WE ARE SOCIAL</h4></li>
