--- a/Mini-Project/html/alumni.html
+++ b/Mini-Project/html/alumni.html
@@ -8,7 +8,7 @@
         Awesome Template
         http://www.templatemo.com/preview/templatemo_450_awesome
         -->
-    <title>Alumni Details</title>
+    <title>Alumni Details!</title>
     <link rel="icon" href="images/alumni.png">
     <meta name="keywords" content="">
     <meta name="description" content="">
