--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -242,21 +242,34 @@
     				</div>
     				<div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
                         <div class="portfolio-thumb">
-    					   <img src="images/portfolio-img1.jpg" class="img-responsive" alt="portfolio img 1">
+    					   <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.pqNuPo0ZurLFrJDS57vwIwHaDU%26pid%3DApi&f=1&ipt=4172da559cf6103b0a058ff7f72a60194dc87ca57657e5bc5c41ca70e2a63592&ipo=images" class="img-responsive" alt="portfolio img 1">
                                 <div class="portfolio-overlay">
-                                    <h4>Project One</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
-                                    <a href="#" class="btn btn-default">DETAIL</a>
+                                    <h4>Alumni Meetup #1</h4>
+                                    <p></p>
                                 </div>
                         </div>
     				</div>
     				<div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
                         <div class="portfolio-thumb">
-                           <img src="images/portfolio-img2.jpg" class="img-responsive" alt="portfolio img 2">
+                           <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.nOvLQoTnbir20IaaneD70QHaE8%26pid%3DApi&f=1&ipt=1234518167e1941a1ffeb5785f37143dc1a924f0baa3023c0f68c969a06c24db&ipo=images" class="img-responsive" alt="portfolio img 2">
                                 <div class="portfolio-overlay">
-                                    <h4>Project Two</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
-                                    <a href="#" class="btn btn-default">DETAIL</a>
+                                    <h4>Alumni Meetup #2</h4>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
+                        <div class="portfolio-thumb">
+                           <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.qmjJD9v3n1HREL0jiI6udQHaE8%26pid%3DApi&f=1&ipt=f38554afd76fe1d83a5f6ad0a9ffc9a813354b1f6ab5d65943970d58e681227f&ipo=images" class="img-responsive" alt="portfolio img 3">
+                                <div class="portfolio-overlay">
+                                    <h4>Alumni Meetup #3</h4>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
+                        <div class="portfolio-thumb">
+                           <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.HDnPgfOWqWvL6jZheF_P5gHaDq%26pid%3DApi&f=1&ipt=bae5c6050fbc2163ad44a8fffb9039cccb33f7a6abcd01f40fd028afca0db755&ipo=images" class="img-responsive" alt="portfolio img 4">
+                                <div class="portfolio-overlay">
+                                    <h4>Alumni Meetup #4</h4>
                                 </div>
                         </div>
                     </div>
@@ -264,29 +277,7 @@
                         <div class="portfolio-thumb">
                            <img src="images/portfolio-img3.jpg" class="img-responsive" alt="portfolio img 3">
                                 <div class="portfolio-overlay">
-                                    <h4>Project Three</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
-                                    <a href="#" class="btn btn-default">DETAIL</a>
-                                </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
-                        <div class="portfolio-thumb">
-                           <img src="images/portfolio-img4.jpg" class="img-responsive" alt="portfolio img 4">
-                                <div class="portfolio-overlay">
-                                    <h4>Project Four</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
-                                    <a href="#" class="btn btn-default">DETAIL</a>
-                                </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
-                        <div class="portfolio-thumb">
-                           <img src="images/portfolio-img3.jpg" class="img-responsive" alt="portfolio img 3">
-                                <div class="portfolio-overlay">
-                                    <h4>Project Five</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
-                                    <a href="#" class="btn btn-default">DETAIL</a>
+                                    <h4>Alumni Meetup #5</h4>
                                 </div>
                         </div>
                     </div>
